This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/12/25: SEM_4-3-0beta2
11/12/25: Added EDM dose percentage to imaging states.

11/11/25: Added property to set magnification below which "autofocus" will set
standard focus instead of autofocusing, even when calibrated.

11/11/25: Implemented frame saving and aligning for JEOL cameras.

11/11/25: SEM_4-2-12
11/11/25: Fixed ability to enter -1 for compression options to SetFileOptions
(In 4.2).

11/11/25: Fixed crash if camera plugin cannot load, broken 10/13/25. (In 4.2).

11/9/25: Added the ability to take subareas of arbitrary size and centering
from Falcon and Ceta cameras.  Binning 8 now works on all Falcons and can be
added to the camera properties.

11/7/25: Fixed camera setup to show only 3 size buttons for Ceta (In 4.2).

11/6/25: Added buttons to scope control panel to adjust EDM dose percentage if
there is an EDM.

11/6/25: Added an optional argument to SetDoseRate script command which is a 
flag to use an EDM to modify the dose rate.

11/6/25: Added "Set Dose Rate with EDM" item to Tasks menu, which sets the dose
rate by modifying the EDM dose percentage.  

11/6/25: Fixed index numbers in Navigator when items are deleted (In 4.2).

11/6/25: Fixed SetBinning, SetCenteredSize, and SetMontageParams to accept
binning 0.5 in Python (In 4.2).

11/3/25: Fixed ReportCameraLength for Thermo in STEM mode (In 4.2).

11/3/25: SEM_4-2-11 
11/3/25: Fixed using tilt series selections for scripts to run before/after
when acquisition is started with StartNavAcquireAtEnd (In 4.2).

11/1/25: Fixed crash if FindAndCenterOneHole is used iwth 0 diameter when
Navigator is not open.

10/29/25: Fixed entering TIFF, JPEG, or -1 for compression with SnapshotToFile
(In 4.2).
