@@ -3793,6 +3793,12 @@
             that the phase plates are named like 'Ph Pn' (e.g., 'Ph P2') in the combo box.&nbsp; </TD>
         </TR>
         <TR>
+          <TD class="scriptcommand">GetApertureSizes #I var</TD>
+          <TD>For JEOL scopes, gets the aperture sizes set by the ApertureSizes property for 
+              aperture with index <strong>#I</strong>, and stores their values in an array 
+              variable <strong>var</strong>.</TD>
+        </TR>
+        <TR>
           <TD class="scriptcommand">RemoveAperture #</TD>
           <TD>Removes the aperture whose index is the given <b>#</b> (JEOL, Hitachi, and Thermo/FEI scopes 
             as described for 'ReportApertureSize').&nbsp; 
