@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/13/25: Added script command to get JEOL aperture sizes for a given aperture
+index.
+
 11/12/25: SEM_4-3-0beta2
 11/12/25: Added EDM dose percentage to imaging states.
 
